clockWork fix, design alignment

--- a/app/client/styles.css
+++ b/app/client/styles.css
@@ -1,16 +1,35 @@
-main {
+html {
 	display: flex;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+body {
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding: 0;
+	height: 100%;
 }
 header {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	/*align-content: center;*/
 	justify-content: center;
-	/*text-align: center;*/
 	padding-top: 15px;
 	padding-bottom: 15px;
 	font-size: 100px;
+	width: 100%;
+	margin: 0;
+}
+main {
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
+	padding: 0;
+	margin: 0;
+	height: 100%;
 }
 #clock-size-increment {
 	margin-right: 2em;
@@ -18,25 +37,25 @@ header {
 	border: none;
 	background-color: white;
 }
-#clock-size-increment:hover {
-	color: red;
-}
 #clock-size-decrement {
 	margin-left: 2em;
 	font-size: .7em;
 	border: none;
 	background-color: white;
 }
+#clock-size-increment:hover {
+	color: red;
+}
 #clock-size-decrement:hover {
 	color: red;
 }
 #viewer {
-	border: 2px solid blue;
 	width: 50%;
-	height: 100%;
+	overflow: auto;
+	background-color: #246da5;
 }
 #controller {
-	border: 2px solid green;
 	width: 50%;
-	height: 100%;
+	overflow: auto;
+	background-color: #246da5;
 }
